# Noah-Test-lbpjqhe

./: CLAUDE.md  README.md  meltano.yml  run_to_sqlite.py  singer_to_sqlite.py  workspace.yml
pipelines/: dogapi.yml  github.yml  gmail.yml  instagram.yml  meltano-cloud.yml  nhl-stats-api.yml  strava.yml  weekly-road-fuel-prices.yml
plugins/extractors/tap-dogapi/: pyproject.toml
plugins/extractors/tap-dogapi/tap_dogapi/: tap.py
plugins/extractors/tap-dogapi/tap_dogapi.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
